SERVER-41352 Incorrect verbose configuration in the wiredtiger connection string

(cherry picked from commit 99e7f57e7e5eb63f22e2b582a10e78c197b835e6)