src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp
@@ -592,12 +592,12 @@ WiredTigerKVEngine::WiredTigerKVEngine(const std::string& canonicalName,
         ss << wiredTigerGlobalOptions.journalCompressor << "),";
         ss << "file_manager=(close_idle_time=100000),";  //~28 hours, will put better fix in 3.1.x
         ss << "statistics_log=(wait=" << wiredTigerGlobalOptions.statisticsLogDelaySecs << "),";
-        ss << "verbose=(recovery_progress),";
-        ss << "verbose=(checkpoint_progress),";
 
         if (shouldLog(::mongo::logger::LogComponent::kStorageRecovery,
                       logger::LogSeverity::Debug(3))) {
-            ss << "verbose=(recovery),";
+            ss << "verbose=[recovery_progress,checkpoint_progress,recovery],";
+        } else {
+            ss << "verbose=[recovery_progress,checkpoint_progress],";
         }
     }
     ss << WiredTigerCustomizationHooks::get(getGlobalServiceContext())
